--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-secret_key='django-insecure-entwu=w#s12miom#r8hzl2g*6_-x6=iyo3@qwv9e0q@dmyff'
+secret_key = django-insecure-entwu=w#s12miom#r8hzl2g*6_-x6=iyo$33@qwv9e0q@dmyff
